BAP-18442: Wrong scroll behavior in inline grids - allow merge block fixes - overflow fix (removal)

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/drag-and-drop-view.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/drag-and-drop-view.scss
@@ -2,7 +2,6 @@
 
 .drag-n-drop-sorting-view {
     min-width: $drag-n-drop-sorting-view-width;
-    overflow: $drag-n-drop-sorting-view-overflow;
 
     &__wrapper {
         &.disabled {
